[gd_scene load_steps=2 format=2]

[ext_resource path="res://TEST.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="col0" type="VBoxContainer" parent="grid"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="gdcfg" type="PanelContainer" parent="grid/col0"]
margin_right = 510.0
margin_bottom = 258.0

[node name="vbox" type="VBoxContainer" parent="grid/col0/gdcfg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 251.0

[node name="hbox" type="HBoxContainer" parent="grid/col0/gdcfg/vbox"]
margin_right = 496.0
margin_bottom = 24.0

[node name="Title" type="Label" parent="grid/col0/gdcfg/vbox/hbox"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Question ID:"

[node name="LineEdit" type="LineEdit" parent="grid/col0/gdcfg/vbox/hbox"]
margin_left = 86.0
margin_right = 496.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="hbox2" type="HBoxContainer" parent="grid/col0/gdcfg/vbox"]
margin_top = 28.0
margin_right = 496.0
margin_bottom = 48.0

[node name="Button" type="Button" parent="grid/col0/gdcfg/vbox/hbox2"]
margin_right = 141.0
margin_bottom = 20.0
text = "Check .gdcfg validity"

[node name="Result" type="Label" parent="grid/col0/gdcfg/vbox/hbox2"]
margin_left = 145.0
margin_top = 3.0
margin_right = 185.0
margin_bottom = 17.0
text = "Result"

[node name="ScrollContainer" type="ScrollContainer" parent="grid/col0/gdcfg/vbox"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 192 )
scroll_horizontal_enabled = false

[node name="Label" type="Label" parent="grid/col0/gdcfg/vbox/ScrollContainer"]
margin_right = 496.0
margin_bottom = 14.0
size_flags_horizontal = 3
autowrap = true

[node name="col1" type="VBoxContainer" parent="grid"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="grid/col0/gdcfg/vbox/hbox2/Button" to="." method="_check_gdcfg"]
